--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,14 +14,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout Code
         uses: actions/checkout@v2
 
       - name: Cache Node.js modules
         uses: actions/cache@v3
         with:
           path: |
-            node_modules
             ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
@@ -34,9 +33,6 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-
-      - name: Run tests
-        run: npm test
 
       - name: Build
         run: npm run build
@@ -53,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout Code
         uses: actions/checkout@v2
 
       - name: Download artifacts
@@ -61,15 +57,12 @@ jobs:
         with:
           name: production-artifacts
 
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+
       - name: Deploy to Staging
-        uses: sws2apps/firebase-deployment@main
-        with:
-          workloadIdentityProvider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-          serviceAccount: ${{ secrets.SERVICE_ACCOUNT }}
-          config: 'frontend/firebase.json'
-          function: true
-          hosting: true
-          project: black-market-129be
+        run: |
+          firebase deploy --only hosting --project black-market-129be
 
       - name: Run Staging Tests
         run: npm run test-staging
@@ -81,7 +74,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout Code
         uses: actions/checkout@v2
 
       - name: Download artifacts
@@ -89,12 +82,12 @@ jobs:
         with:
           name: production-artifacts
 
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+
       - name: Deploy to Production
-        uses: sws2apps/firebase-deployment@main
-        with:
-          workloadIdentityProvider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-          serviceAccount: ${{ secrets.SERVICE_ACCOUNT }}
-          config: 'frontend/firebase.json'
-          function: true
-          hosting: true
-          project: black-market-129be
+        run: |
+          firebase deploy --only hosting --project black-market-129be
+
+      - name: Run Production Tests
+        run: npm run test-production
