--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,25 +17,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: Cache Node.js modules
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18'
-
-      - name: Install dependencies
-        run: npm install
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
 
       - name: Build
-        run: npm run build
+        run: |
+          # Add commands for build here, if needed, or remove this step if not applicable
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v2
