--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Build
         run: |
           # Add commands for build here, if needed, or remove this step if not applicable
+          mkdir -p build # Ensure the build directory exists
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v2
