--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,14 +22,9 @@ jobs:
 
       - name: Build
         run: |
-          # Add commands for build here, if needed, or remove this step if not applicable
-          mkdir -p build # Ensure the build directory exists
-
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: production-artifacts
-          path: build/
+          # Add commands for your build process here
+          # For example, if you have a build script, you can run it here
+          # npm run build
 
   deploy-staging:
     name: Deploy to Staging
@@ -39,11 +34,6 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: production-artifacts
 
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
@@ -64,11 +54,6 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: production-artifacts
 
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
