--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - main
+      - preview
   pull_request:
     branches:
       - main
+      - preview
 
 
 jobs:
@@ -20,7 +22,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: '18'
 
       - name: Install Functions Dependencies
         run: |
