--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,8 +9,7 @@ on:
     branches:
       - main
       - preview
-
-
+    
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -22,7 +21,10 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18'
+          node-version: '16'
+
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
 
       - name: Install Functions Dependencies
         run: |
