--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,50 +1,24 @@
-name: Firebase Hosting CI/CD
+name: CI/CD Pipeline
 
 on:
   push:
     branches:
       - main
-      - preview
   pull_request:
     branches:
       - main
-      - preview
-
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18'
-
-      - name: Install Functions Dependencies
-        run: |
-          cd functions
-          npm install
-
-      - name: Deploy to Firebase Hosting Preview
-        if: github.ref == 'refs/heads/preview'
+      - name: Deploy to Firebase
         env:
-          FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
-          echo $FIREBASE_SERVICE_ACCOUNT > ${GITHUB_WORKSPACE}/firebase-service-account.json
-          firebase use --add black-market-129be
-          firebase deploy --only hosting --project black-market-129be --token $FIREBASE_TOKEN --message "Deploying preview"
-
-      - name: Deploy to Firebase Hosting Live
-        if: github.ref == 'refs/heads/main'
-        env:
-          FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        run: |
-          echo $FIREBASE_SERVICE_ACCOUNT > ${GITHUB_WORKSPACE}/firebase-service-account.json
-          firebase use --add black-market-129be
-          firebase deploy --only hosting --project black-market-129be --token $FIREBASE_TOKEN --message "Deploying live"
+          npm install -g firebase-tools
+          firebase deploy --only hosting
