--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,21 +1,20 @@
-name: Firebase Hosting CI/CD
+name: CI/CD Pipeline
 
 on:
   push:
     branches:
       - main
-      - preview
   pull_request:
     branches:
       - main
       - preview
-    
+
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout Code
         uses: actions/checkout@v2
 
       - name: Set up Node.js
@@ -32,7 +31,7 @@ jobs:
           npm install
 
       - name: Deploy to Firebase Hosting Preview
-        if: github.ref == 'refs/heads/preview'
+        if: github.event_name == 'pull_request' && github.base_ref == 'preview'
         env:
           FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
