--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18'  
+          node-version: '18'
 
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
@@ -38,7 +38,7 @@ jobs:
         run: |
           echo $FIREBASE_SERVICE_ACCOUNT > ${GITHUB_WORKSPACE}/firebase-service-account.json
           firebase use --add black-market-129be
-          firebase deploy --only hosting --project black-market-129be --token $FIREBASE_TOKEN --message "Deploying preview"
+          firebase deploy --only hosting --channel=preview --project black-market-129be --token $FIREBASE_TOKEN --message "Deploying preview"
 
       - name: Deploy to Firebase Hosting Live
         if: github.ref == 'refs/heads/main'
