--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,7 +33,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install Firebase CLI
-        run: npm install -g firebase-tools
+        run: npm install -g firebase-tools@latest
 
       - name: Install Functions Dependencies
         run: |
@@ -45,7 +45,7 @@ jobs:
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
-          firebase deploy --only hosting --channel=preview --project black-market-129be --token $FIREBASE_TOKEN --message "Deploying preview"
+          firebase hosting:channel:deploy preview --project black-market-129be --token $FIREBASE_TOKEN --message "Deploying preview"
 
       - name: Deploy to Firebase Hosting Live
         if: github.ref == 'refs/heads/main'
