--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,6 +22,7 @@ jobs:
           node-version: '18'
 
       - name: Cache Node modules
+        if: false  # 캐싱 비활성화
         uses: actions/cache@v3
         with:
           path: |
@@ -33,11 +34,6 @@ jobs:
 
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
-
-      - name: Install Functions Dependencies
-        run: |
-          cd functions
-          npm install
 
       - name: Deploy to Firebase Hosting Live
         if: github.ref == 'refs/heads/main'
