--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: '18'
 
       - name: Cache Node modules
-        if: false  # 캐싱 비활성화
+        if: true  # 캐싱 활성화
         uses: actions/cache@v3
         with:
           path: |
